# OpenGL-Texture-Demo

./: BUGS.md  CMakeLists.txt  ReadMe.md  gitignore  pipeline.md  updatelog.md
include/: Camera.h  Cube.h  Material.h  Mesh.h  RenderPasses.h  Renderer.h  Scene.h  Shader.h  Texture.h
shaders/: basic.frag  basic.vert  cull_and_build_indirect.comp  depth.frag  depth.vert  light.frag  light.vert
src/: Camera.cpp  Shader.cpp  main.cpp
src/core/: RenderPasses.cpp  Renderer.cpp
src/graphics/: Shader.cpp  Texture.cpp
src/objects/: Cube.cpp  Mesh.cpp
src/scene/: Scene.cpp
